format html, switch from tabs to spaces

--- a/about/index.html
+++ b/about/index.html
@@ -1,83 +1,133 @@
 <html>
-	<head>
-		<title>Nathan McMurry Thomas Fund, Inc.</title>
-		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<div id="all">
-			<div id="top">
-				<h1><a href="/" title="Return to the front page">Nathan McMurry Thomas Fund</a></h1>
-				<ul id="navigation">
-					<li><a href="/">Home</a></li>
-					<li><a href="/nathan/">Nathan's Life</a></li>
-					<li><a href="/about/">About the Fund</a></li>
-					<li><a href="/tournament/">Tournament Info</a></li>
-					<li><a href="/legacy/">Legacy</a></li>
-				</ul>
-			</div>
-			<div id="content">
-				<h2>History of the Fund</h2>
-				<p>
-					Portlanders responded to Nathan&rsquo;s death by comforting each other, remembering
-					Nathan and helping his family, and searching for ways to improve the Portland
-					community. They held meetings and a candlelight vigil at Laurelhurst Park, in
-					Nathan&rsquo;s neighborhood. Those early discussions led to formation of the Nathan
-					McMurry Thomas Fund.   
-				</p>
+    <head>
+        <title>Nathan McMurry Thomas Fund, Inc.</title>
+        <link href="/assets/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="all">
+            <div id="top">
+                <h1>
+                    <a href="/" title="Return to the front page"
+                        >Nathan McMurry Thomas Fund</a
+                    >
+                </h1>
+                <ul id="navigation">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/nathan/">Nathan's Life</a></li>
+                    <li><a href="/about/">About the Fund</a></li>
+                    <li><a href="/tournament/">Tournament Info</a></li>
+                    <li><a href="/legacy/">Legacy</a></li>
+                </ul>
+            </div>
+            <div id="content">
+                <h2>History of the Fund</h2>
+                <p>
+                    Portlanders responded to Nathan&rsquo;s death by comforting
+                    each other, remembering Nathan and helping his family, and
+                    searching for ways to improve the Portland community. They
+                    held meetings and a candlelight vigil at Laurelhurst Park,
+                    in Nathan&rsquo;s neighborhood. Those early discussions led
+                    to formation of the Nathan McMurry Thomas Fund.
+                </p>
 
-				<p>
-					The Community Unity Concert, a day of music for Portlanders, was held in
-					Laurelhurst Park in Nathan&rsquo;s memory.  Private donations and volunteer work
-					created a new soccer field in Laurelhurst Park Annex.  Now called the &ldquo;Nathan
-					Thomas Field&rdquo;, it is actively used for practices and small-sided games.  Proceeds
-					from a memorial soccer tournament and individual donations allow the fund to
-					continue to support projects and activities in Nathan&rsquo;s memory.
-				</p>
+                <p>
+                    The Community Unity Concert, a day of music for Portlanders,
+                    was held in Laurelhurst Park in Nathan&rsquo;s memory.
+                    Private donations and volunteer work created a new soccer
+                    field in Laurelhurst Park Annex. Now called the
+                    &ldquo;Nathan Thomas Field&rdquo;, it is actively used for
+                    practices and small-sided games. Proceeds from a memorial
+                    soccer tournament and individual donations allow the fund to
+                    continue to support projects and activities in
+                    Nathan&rsquo;s memory.
+                </p>
 
-				<h2>Projects Supported by the Fund</h2>
-				<dl>
-					<dt>Soccer Outreach</dt>
-					<dd>Nathan loved soccer and, by going to his games, his family became connected to other families and involved in the community.  The fund has supported struggling soccer clubs in Portland neighborhoods, purchased soccer goals for schools and community centers and helped new recreational soccer teams. </dd>
+                <h2>Projects Supported by the Fund</h2>
+                <dl>
+                    <dt>Soccer Outreach</dt>
+                    <dd>
+                        Nathan loved soccer and, by going to his games, his
+                        family became connected to other families and involved
+                        in the community. The fund has supported struggling
+                        soccer clubs in Portland neighborhoods, purchased soccer
+                        goals for schools and community centers and helped new
+                        recreational soccer teams.
+                    </dd>
 
-					<dt>Literacy Programs</dt>
-					<dd>Nathan was an avid reader and bedtime stories were a family routine.  The fund has supported additions to school libraries, early reading classes and literacy programs for families with English as a Second Language.</dd>
+                    <dt>Literacy Programs</dt>
+                    <dd>
+                        Nathan was an avid reader and bedtime stories were a
+                        family routine. The fund has supported additions to
+                        school libraries, early reading classes and literacy
+                        programs for families with English as a Second Language.
+                    </dd>
 
-					<dt>Improvements in Schools and Parks</dt>
-					<dd>Nathan was a good student and athlete and had many friends.  The fund has supported playgrounds, gardens and other improvements in schools and parks that provide environments for enrichment and community activities.</dd>
+                    <dt>Improvements in Schools and Parks</dt>
+                    <dd>
+                        Nathan was a good student and athlete and had many
+                        friends. The fund has supported playgrounds, gardens and
+                        other improvements in schools and parks that provide
+                        environments for enrichment and community activities.
+                    </dd>
 
-					<dt><a href="scholarshiprecipients.html" title="View the scholarship recipients">College Scholarships</a></dt>
-					<dd>Nathan liked to learn and compete academically and probably would have gone to college.  Since he did not get that chance, scholarships in his memory have been given to high school seniors from traditional and alternative public schools to help them achieve their college goals. </dd>
+                    <dt>
+                        <a
+                            href="scholarshiprecipients.html"
+                            title="View the scholarship recipients"
+                            >College Scholarships</a
+                        >
+                    </dt>
+                    <dd>
+                        Nathan liked to learn and compete academically and
+                        probably would have gone to college. Since he did not
+                        get that chance, scholarships in his memory have been
+                        given to high school seniors from traditional and
+                        alternative public schools to help them achieve their
+                        college goals.
+                    </dd>
 
-					<dt>Help for At-Risk Children and Families</dt>
-					<dd>The young man who took Nathan hostage had a long history of school problems and juvenile delinquency.  The fund has supported special programs for children with mental illnesses, difficult social situations and others who need extra encouragement to succeed in school and to feel a valued part of the community. </dd>
+                    <dt>Help for At-Risk Children and Families</dt>
+                    <dd>
+                        The young man who took Nathan hostage had a long history
+                        of school problems and juvenile delinquency. The fund
+                        has supported special programs for children with mental
+                        illnesses, difficult social situations and others who
+                        need extra encouragement to succeed in school and to
+                        feel a valued part of the community.
+                    </dd>
 
-					<dt>Excellence in the Portland Police Bureau</dt>
-					<dd>
-					Portland Police Officers wanted to rescue Nathan, not to harm him.  Nathan&rsquo;s
-					death emphasized the importance of an excellent Police Bureau to all Portlanders.
-					The Nathan Thomas Memorial Award is given annually by the Chief&rsquo;s Forum to
-					recognize outstanding performance by a member of the Portland Police Bureau. 
-					</dd>
-				</dl>
+                    <dt>Excellence in the Portland Police Bureau</dt>
+                    <dd>
+                        Portland Police Officers wanted to rescue Nathan, not to
+                        harm him. Nathan&rsquo;s death emphasized the importance
+                        of an excellent Police Bureau to all Portlanders. The
+                        Nathan Thomas Memorial Award is given annually by the
+                        Chief&rsquo;s Forum to recognize outstanding performance
+                        by a member of the Portland Police Bureau.
+                    </dd>
+                </dl>
 
-				<h2>Contribute to the fund</h2>
-				<p>
-				The fund welcomes suggestions for other projects related to its mission.  For
-				further information regarding requests for funding or donations contact:
-				</p>
-				<div class="vcard">
-						<div class="fn org">Nathan McMurry Thomas Fund</div>
-						<div class="adr">
-							<div class="street-address">825 NE Hazelfern Place</div>
-							<span class="locality">Portland</span>,
-							<abbr class="region" title="Oregon">OR</abbr> 
-							<span class="postal-code">97232</span>
-						</div>
-				</div>
-				<p>
-					The Nathan McMurry Thomas Fund, Inc. is a 501(c)(3) tax-exempt organization.  Donations to the fund are tax-deductible.
-				</p>
-			</div>
-		</div>
-	</body>
+                <h2>Contribute to the fund</h2>
+                <p>
+                    The fund welcomes suggestions for other projects related to
+                    its mission. For further information regarding requests for
+                    funding or donations contact:
+                </p>
+                <div class="vcard">
+                    <div class="fn org">Nathan McMurry Thomas Fund</div>
+                    <div class="adr">
+                        <div class="street-address">825 NE Hazelfern Place</div>
+                        <span class="locality">Portland</span>,
+                        <abbr class="region" title="Oregon">OR</abbr>
+                        <span class="postal-code">97232</span>
+                    </div>
+                </div>
+                <p>
+                    The Nathan McMurry Thomas Fund, Inc. is a 501(c)(3)
+                    tax-exempt organization. Donations to the fund are
+                    tax-deductible.
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
