--- a/about/scholarshiprecipients.html
+++ b/about/scholarshiprecipients.html
@@ -1,144 +1,219 @@
 <html>
-	<head>
-		<title>Nathan McMurry Thomas Fund, Inc.</title>
-		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<div id="all">
-			<div id="top">
-				<h1><a href="/" title="Return to the front page">Nathan McMurry Thomas Fund</a></h1>
-				<ul id="navigation">
-					<li><a href="/">Home</a></li>
-					<li><a href="/nathan/">Nathan's Life</a></li>
-					<li><a href="/about/">About the Fund</a></li>
-					<li><a href="/tournament/">Tournament Info</a></li>
-					<li><a href="/legacy/">Legacy</a></li>
-				</ul>
-			</div>
-			<div id="content">
-				<h2>Scholarship Recipients</h2>
-				<dl>
-					<dt>1997</dt><dd><ul><li>  Amanda Martin, Macalaster College</li>
+    <head>
+        <title>Nathan McMurry Thomas Fund, Inc.</title>
+        <link href="/assets/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="all">
+            <div id="top">
+                <h1>
+                    <a href="/" title="Return to the front page"
+                        >Nathan McMurry Thomas Fund</a
+                    >
+                </h1>
+                <ul id="navigation">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/nathan/">Nathan's Life</a></li>
+                    <li><a href="/about/">About the Fund</a></li>
+                    <li><a href="/tournament/">Tournament Info</a></li>
+                    <li><a href="/legacy/">Legacy</a></li>
+                </ul>
+            </div>
+            <div id="content">
+                <h2>Scholarship Recipients</h2>
+                <dl>
+                    <dt>1997</dt>
+                    <dd>
+                        <ul>
+                            <li>Amanda Martin, Macalaster College</li>
+                        </ul>
+                    </dd>
+                    <dt>1998</dt>
+                    <dd>
+                        <ul>
+                            <li>Patrick Malarkey, Drake University</li>
 
-					</ul></dd><dt>1998</dt><dd><ul><li>  Patrick Malarkey, Drake University</li>
+                            <li>Tyler Boeh, University of Oregon</li>
 
-					<li>Tyler Boeh, University of Oregon   </li>
+                            <li>
+                                Aiyesha Christian, Portland Community College
+                            </li>
 
-					<li>Aiyesha Christian, Portland Community College    </li>
+                            <li>Lydia Rediske, St. Johns College</li>
+                        </ul>
+                    </dd>
+                    <dt>1999</dt>
+                    <dd>
+                        <ul>
+                            <li>Adam Perry, Evergreen College</li>
 
-					<li>Lydia Rediske, St. Johns College</li>
+                            <li>Rose Christianson</li>
+                        </ul>
+                    </dd>
+                    <dt>2000</dt>
+                    <dd>
+                        <ul>
+                            <li>Haley Egan, Portland Community College</li>
 
-			</ul></dd><dt>1999</dt><dd><ul><li> Adam Perry, Evergreen College</li>
+                            <li>Ben Klick, Portland Community College</li>
+                        </ul>
+                    </dd>
+                    <dt>2001</dt>
+                    <dd>
+                        <ul>
+                            <li>Hue Lam, Portland State University</li>
 
-			<li>Rose Christianson</li>
+                            <li>Catlin Moser, Portland Community College</li>
 
-</ul></dd><dt>2000</dt><dd><ul><li> Haley Egan, Portland Community College </li>
+                            <li>Jaron Lance, Portland Community College</li>
+                        </ul>
+                    </dd>
+                    <dt>2002</dt>
+                    <dd>
+                        <ul>
+                            <li>Kevin Manson, University of Portland</li>
 
-<li>Ben Klick, Portland Community College</li>
+                            <li>Joseph English, University of Montana</li>
 
-</ul></dd><dt>2001</dt><dd><ul><li>   Hue Lam, Portland State University</li>
+                            <li>Alicia Nicholson Buckland</li>
+                        </ul>
+                    </dd>
+                    <dt>2003</dt>
+                    <dd>
+                        <ul>
+                            <li>Katie Caskey, Oregon State University</li>
 
-<li>Catlin Moser, Portland Community College  </li>
+                            <li>Jessie Harkness, Portland Community College</li>
+                        </ul>
+                    </dd>
+                    <dt>2004</dt>
+                    <dd>
+                        <ul>
+                            <li>Molly Paterno, Layola Marymount</li>
 
-<li>Jaron Lance, Portland Community College</li>
+                            <li>Kyle Doran, Lafayette College</li>
 
-			</ul></dd><dt>2002</dt><dd><ul><li> Kevin Manson, University of Portland</li>
+                            <li>Brooke Willis, Portland Community College</li>
+                        </ul>
+                    </dd>
+                    <dt>2005</dt>
+                    <dd>
+                        <ul>
+                            <li>Michael Cynkar, College of Wooster</li>
 
-			<li>Joseph English, University of Montana</li>
+                            <li>
+                                Anatoliy Lobasyuk, MHCC Automotive Education
+                                Program
+                            </li>
 
-			<li>Alicia Nicholson Buckland           </li>
+                            <li>Meghan Roe, Portland Community College</li>
+                        </ul>
+                    </dd>
+                    <dt>2006</dt>
+                    <dd>
+                        <ul>
+                            <li>Kendra Bailey, University of Portland</li>
 
-			</ul></dd><dt>2003</dt><dd><ul><li> Katie Caskey, Oregon State University </li>
+                            <li>Steven Mawson</li>
+                        </ul>
+                    </dd>
+                    <dt>2007</dt>
+                    <dd>
+                        <ul>
+                            <li>Wilson Bailey, University of Puget Sound</li>
 
-			<li>Jessie Harkness, Portland Community College  </li>
+                            <li>Lyudmila Belza, Portland Community College</li>
 
-</ul></dd><dt>2004</dt><dd><ul><li> Molly Paterno, Layola Marymount</li>
+                            <li>
+                                Endeavor Rose Nehrlich, Portland Community
+                                College
+                            </li>
+                        </ul>
+                    </dd>
+                    <dt>2008</dt>
+                    <dd>
+                        <ul>
+                            <li>Valentina Harold, Barry University, Miami</li>
+                            <li>
+                                Christina O'leary, Portland Community College
+                            </li>
+                            <li>Danielle Rose Swanson</li>
+                        </ul>
+                    </dd>
+                    <dt>2009</dt>
+                    <dd>
+                        <ul>
+                            <li>Taylor Bailey, Reed College</li>
+                            <li>
+                                Dylan Christiansen, Columbia College Hollywood
+                            </li>
+                            <li>
+                                James Gregory Fleming, Mt. Hood Community
+                                College
+                            </li>
+                        </ul>
+                    </dd>
+                    <dt>2010</dt>
+                    <dd>
+                        <ul>
+                            <li>Jordan Takashi Green, Concordia University</li>
+                            <li>Pareece Pittman</li>
+                        </ul>
+                    </dd>
+                    <dt>2011</dt>
+                    <dd>
+                        <ul>
+                            <li>Raymond Chau, Oregon State University</li>
+                        </ul>
+                    </dd>
 
-<li>Kyle Doran, Lafayette College     </li>
+                    <dt>2012</dt>
+                    <dd>
+                        <ul>
+                            <li>
+                                Gisela Gonzalez&ndash;Montiel, University of
+                                Portland
+                            </li>
+                            <li>Kaitlyn Schakols, University of Oregon</li>
+                            <li>Geniveve Anderson</li>
+                        </ul>
+                    </dd>
 
-<li>Brooke Willis, Portland Community College     </li>  
+                    <dt>2013</dt>
+                    <dd>
+                        <ul>
+                            <li>Drew Edmonds, Whitman College</li>
+                            <li>
+                                Cyrus Oliver, California Polytechnic State
+                                University
+                            </li>
+                            <li>Ryan Peck, Portland Community College</li>
+                            <li>Laura Salholm, Corban University</li>
+                        </ul>
+                    </dd>
 
-			</ul></dd><dt>2005</dt><dd><ul><li> Michael Cynkar, College of Wooster  </li>
+                    <dt>2014</dt>
+                    <dd>
+                        <ul>
+                            <li>Abby Williams, Portland State University</li>
+                            <li>Serra Ross</li>
+                        </ul>
+                    </dd>
 
-			<li>Anatoliy Lobasyuk, MHCC Automotive Education Program</li>
-
-			<li>Meghan Roe, Portland Community College</li>
-
-			</ul></dd><dt>2006</dt><dd><ul><li> Kendra Bailey, University of Portland</li>
-
-				<li>Steven Mawson
-
-			</ul></dd><dt>2007</dt><dd><ul><li>  Wilson Bailey, University of Puget Sound</li>
-
-			<li>Lyudmila Belza, Portland Community College</li>
-
-			<li>Endeavor Rose Nehrlich, Portland Community College </li></ul></dd>
-			<dt>2008</dt>
-			<dd>
-				<ul>
-					<li>Valentina Harold, Barry University, Miami</li>
-					<li>Christina O'leary, Portland Community College</li>
-					<li>Danielle Rose Swanson</li>
-				</ul>
-			</dd>
-			<dt>2009</dt>
-			<dd>
-				<ul>
-					<li>Taylor Bailey, Reed College</li>
-					<li>Dylan Christiansen, Columbia College Hollywood</li>
-					<li>James Gregory Fleming, Mt. Hood Community College</li>
-				</ul>
-			</dd>
-			<dt>2010</dt>
-			<dd>
-				<ul>
-					<li>Jordan Takashi Green, Concordia University</li>
-					<li>Pareece Pittman</li>
-				</ul>
-			</dd>
-			<dt>2011</dt>
-			<dd>
-				<ul>
-					<li>Raymond Chau, Oregon State University</li>
-				</ul>
-			</dd>
-
-			<dt>2012</dt>
-			<dd>
-				<ul>
-					<li>Gisela Gonzalez&ndash;Montiel, University of Portland</li>
-					<li>Kaitlyn Schakols, University of Oregon</li>
-					<li>Geniveve Anderson</li>
-				</ul>
-			</dd>
-
-			<dt>2013</dt>
-			<dd>
-				<ul>
-					<li>Drew Edmonds, Whitman College</li>
-					<li>Cyrus Oliver, California Polytechnic State University</li>
-					<li>Ryan Peck, Portland Community College</li>
-					<li>Laura Salholm, Corban University</li>
-				</ul>
-			</dd>
-
-			<dt>2014</dt>
-			<dd>
-				<ul>
-					<li>Abby Williams, Portland State University</li>
-					<li>Serra Ross</li>
-				</ul>
-			</dd>
-
-			<dt>2015</dt>
-			<dd>
-				<ul>
-					<li>Alison Mueller, DigiPen Institute of Technology</li>
-					<li>Gabrielle Story, California State University, Chico</li>
-				</ul>
-			</dd>
-				</dl>
-			</div>
-		</div>
-	</body>
+                    <dt>2015</dt>
+                    <dd>
+                        <ul>
+                            <li>
+                                Alison Mueller, DigiPen Institute of Technology
+                            </li>
+                            <li>
+                                Gabrielle Story, California State University,
+                                Chico
+                            </li>
+                        </ul>
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </body>
 </html>
