--- a/nathan/index.html
+++ b/nathan/index.html
@@ -1,36 +1,84 @@
 <html>
-	<head>
-		<title>Nathan McMurry Thomas Fund, Inc.</title>
-		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<div id="all">
-			<div id="top">
-				<h1><a href="/" title="Return to the front page">Nathan McMurry Thomas Fund</a></h1>
-				<ul id="navigation">
-					<li><a href="/">Home</a></li>
-					<li><a href="/nathan/">Nathan's Life</a></li>
-					<li><a href="/about/">About the Fund</a></li>
-					<li><a href="/tournament/">Tournament Info</a></li>
-					<li><a href="/legacy/">Legacy</a></li>
-				</ul>
-			</div>
-			<div id="content">
-				<p>Nathan was born in Portland on December 19, 1979.  When he was a toddler his family moved to Salt Lake City.  Nathan was nearly four years old when he became the proud big brother to Benjamin. </p>
+    <head>
+        <title>Nathan McMurry Thomas Fund, Inc.</title>
+        <link href="/assets/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="all">
+            <div id="top">
+                <h1>
+                    <a href="/" title="Return to the front page"
+                        >Nathan McMurry Thomas Fund</a
+                    >
+                </h1>
+                <ul id="navigation">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/nathan/">Nathan's Life</a></li>
+                    <li><a href="/about/">About the Fund</a></li>
+                    <li><a href="/tournament/">Tournament Info</a></li>
+                    <li><a href="/legacy/">Legacy</a></li>
+                </ul>
+            </div>
+            <div id="content">
+                <p>
+                    Nathan was born in Portland on December 19, 1979. When he
+                    was a toddler his family moved to Salt Lake City. Nathan was
+                    nearly four years old when he became the proud big brother
+                    to Benjamin.
+                </p>
 
-				<img src="/assets/nathan_school.jpg" />
-				<p>Nathan&rsquo;s personality traits included a keen intellect, a strong stubborn streak, a reserved nature and an easy way of making close friends. These traits served him well. He liked challenges at school and in sports, especially soccer, which he started playing at age five.  His favorite position was forward and he loved to score goals. </p>
+                <img src="/assets/nathan_school.jpg" />
+                <p>
+                    Nathan&rsquo;s personality traits included a keen intellect,
+                    a strong stubborn streak, a reserved nature and an easy way
+                    of making close friends. These traits served him well. He
+                    liked challenges at school and in sports, especially soccer,
+                    which he started playing at age five. His favorite position
+                    was forward and he loved to score goals.
+                </p>
 
-				<p>When Nathan was 9 years old, he was diagnosed with Hodgkin's disease, a type of cancer.  Nathan went through months of treatment that included radiation therapy and chemotherapy.  Throughout the therapy he was determined to go to school and do the things he enjoyed.  He made the competitive soccer team and played basketball.  At the end of his treatment he was free of cancer. </p>
+                <p>
+                    When Nathan was 9 years old, he was diagnosed with Hodgkin's
+                    disease, a type of cancer. Nathan went through months of
+                    treatment that included radiation therapy and chemotherapy.
+                    Throughout the therapy he was determined to go to school and
+                    do the things he enjoyed. He made the competitive soccer
+                    team and played basketball. At the end of his treatment he
+                    was free of cancer.
+                </p>
 
-				<p>Besides playing soccer, Nathan excelled at school.  He liked competition in the classroom and on the playground.  He also liked to collect sports cards, play with Legos and go hiking and backpacking with his family and friends.   </p>
+                <p>
+                    Besides playing soccer, Nathan excelled at school. He liked
+                    competition in the classroom and on the playground. He also
+                    liked to collect sports cards, play with Legos and go hiking
+                    and backpacking with his family and friends.
+                </p>
 
-				<p>In July 1991, Nathan and his family moved back to Portland.  Nathan started sixth grade at Fernwood Middle School and made the honor roll.  He began to make many new friends.  He was on a Portland City United classic soccer team and was a finalist in the Fernwood Geography Bee. </p>
+                <p>
+                    In July 1991, Nathan and his family moved back to Portland.
+                    Nathan started sixth grade at Fernwood Middle School and
+                    made the honor roll. He began to make many new friends. He
+                    was on a Portland City United classic soccer team and was a
+                    finalist in the Fernwood Geography Bee.
+                </p>
 
-				<p>On January 16, 1992, when Nathan was 12 years old, an intruder in his home took him hostage.  Police officers tried to rescue him, but gunfire erupted, and Nathan was accidentally shot by the officers.  He died a few hours later. </p>
+                <p>
+                    On January 16, 1992, when Nathan was 12 years old, an
+                    intruder in his home took him hostage. Police officers tried
+                    to rescue him, but gunfire erupted, and Nathan was
+                    accidentally shot by the officers. He died a few hours
+                    later.
+                </p>
 
-				<p>Nathan&rsquo;s tragic death was a huge loss for his family, his friends, his teammates, the police bureau and all of Portland. We remember Nathan's love of school and sports, his enjoyment of competition, his pleasure in family and friends and his determination to do his best in whatever he set out to do. </p>
-			</div>
-		</div>
-	</body>
+                <p>
+                    Nathan&rsquo;s tragic death was a huge loss for his family,
+                    his friends, his teammates, the police bureau and all of
+                    Portland. We remember Nathan's love of school and sports,
+                    his enjoyment of competition, his pleasure in family and
+                    friends and his determination to do his best in whatever he
+                    set out to do.
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
