--- a/tournament/index.html
+++ b/tournament/index.html
@@ -1,37 +1,48 @@
 <html>
-	<head>
-		<title>Nathan McMurry Thomas Fund, Inc.</title>
-		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<div id="all">
-			<div id="top">
-				<h1><a href="/" title="Return to the front page">Nathan McMurry Thomas Fund</a></h1>
-				<ul id="navigation">
-					<li><a href="/">Home</a></li>
-					<li><a href="/nathan/">Nathan's Life</a></li>
-					<li><a href="/about/">About the Fund</a></li>
-					<li><a href="/tournament/">Tournament Info</a></li>
-					<li><a href="/legacy/">Legacy</a></li>
-				</ul>
-			</div>
-			<div id="content"> 
-				<h2 id="about-tournament-head">About the Tournament</h2>
-				<p>
-					The Nathan Thomas 6v6 Fall Tournament, started by Laurelhurst resident Sue Ofstad
-					the summer after Nathan died, gave young recreational teams in the Portland
-					area an opportunity to compete in a competitive but friendly tournament.
-					Over the years hundreds of children and adults participated in the
-					tournament as players and volunteers.   It was more than a soccer tournament,
-					it was a celebration of children, families and neighbors working and playing
-					together with a shared community heart.
-				</p>
+    <head>
+        <title>Nathan McMurry Thomas Fund, Inc.</title>
+        <link href="/assets/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="all">
+            <div id="top">
+                <h1>
+                    <a href="/" title="Return to the front page"
+                        >Nathan McMurry Thomas Fund</a
+                    >
+                </h1>
+                <ul id="navigation">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/nathan/">Nathan's Life</a></li>
+                    <li><a href="/about/">About the Fund</a></li>
+                    <li><a href="/tournament/">Tournament Info</a></li>
+                    <li><a href="/legacy/">Legacy</a></li>
+                </ul>
+            </div>
+            <div id="content">
+                <h2 id="about-tournament-head">About the Tournament</h2>
+                <p>
+                    The Nathan Thomas 6v6 Fall Tournament, started by
+                    Laurelhurst resident Sue Ofstad the summer after Nathan
+                    died, gave young recreational teams in the Portland area an
+                    opportunity to compete in a competitive but friendly
+                    tournament. Over the years hundreds of children and adults
+                    participated in the tournament as players and volunteers. It
+                    was more than a soccer tournament, it was a celebration of
+                    children, families and neighbors working and playing
+                    together with a shared community heart.
+                </p>
 
-				<h2>History</h2>
+                <h2>History</h2>
 
-				<h3>Spirit of Portland Award</h3>
-				<p>In 2001 Sue Ofstad, tournament founder and director since 1992, was presented with a Spirit of Portland Individual Award for her contributions to the community through the tournament.</p>
-			</div>
-		</div>
-	</body>
+                <h3>Spirit of Portland Award</h3>
+                <p>
+                    In 2001 Sue Ofstad, tournament founder and director since
+                    1992, was presented with a Spirit of Portland Individual
+                    Award for her contributions to the community through the
+                    tournament.
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
